Fixing white right bar on mobile

--- a/src/components/ContactUs/index.scss
+++ b/src/components/ContactUs/index.scss
@@ -45,6 +45,9 @@
                 @media only screen and (max-width: 1060px) {
                     margin: 0 auto;
                     min-width: 408px;
+                }
+                @media only screen and (max-width: 720px) {
+                    min-width: 315px;
                 } 
                 h3 {
                     color: $WHITE;
